# medor

./: .clang-format  .travis.yml  CMakeLists.txt  README.md  conanfile.txt
include/dbus/: CLI.h  CLI.hpp  Constants.h  Notifier.h  Notifier.hpp  Tracker.h  Tracker.hpp  VcsHinter.h  VcsHinter.hpp  VcsTracker.h
include/hg/: HgClient.h  Protocol.h
include/model/: Activity.h
include/storage/: ActivitiesDb.h  ActivityStore.h  ActivityStore.hpp  DB.h  Database.hpp  ProjectStore.h  ProjectStore.hpp  VcsDb.h  VcsStore.h  VcsStore.hpp
include/util/: database.h  database.hpp  logging.h  logging.hpp  time.h  time.hpp
include/vcs/: GitClient.h  GitClient.hpp  HgClient.h  HgClient.hpp  HgProtocol.h  HgProtocol.hpp  IVcsClient.h  IVcsClient.hpp
scripts/: medor.zsh  rofi-medor.sh
src/app/: CMakeLists.txt  medor.cpp  medord.cpp
src/dbus/: CLI.cpp  CMakeLists.txt  Notifier.cpp  Tracker.cpp  VcsHinter.cpp  VcsTracker.cpp
src/hg/: CMakeLists.txt  HgClient.cpp  Protocol.cpp
src/model/: Activity.cpp  CMakeLists.txt
src/storage/: ActivitiesDb.cpp  ActivityStore.cpp  CMakeLists.txt  DB.cpp  Database.cpp  ProjectStore.cpp  VcsDb.cpp  VcsStore.cpp
src/util/: CMakeLists.txt  database.cpp  time.cpp
src/vcs/: CMakeLists.txt  GitClient.cpp  HgClient.cpp  HgProtocol.cpp  IVcsClient.cpp
